--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -13,7 +13,7 @@
     <header>
         <!-- Logo -->
         <div class="logo">
-            <img src="https://images.pling.com/img/00/00/68/78/98/1976105/untitled-5.jpg" alt="logo">
+            <img src="https://images.pling.com/img/00/00/68/78/98/1976105/untitled-5.jpg" alt="logo">">
         </div>
 
         <!-- Navigation in a Div-->
@@ -40,7 +40,6 @@
                 <div>
                     <div>
                         <img src="https://images.pling.com/img/00/00/68/78/98/1976105/untitled-5.jpg"
-                            alt="Phillip Massey">
                         <h3>Phillip Massey</h3>
                         <p>« Smile of the year » <br> 2018 - 2019</p>
                     </div>
