--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -66,8 +66,8 @@
             <div class="quote-part">
                 <img src="./images/school.png" class="profile" alt="">
                 <div>
-                    <blockquote>HEllo people i love you </blockquote>
-                    <p>kay brian </p>
+                    <blockquote>Enjoy in the days of your youth </blockquote>
+                    <p>She said</p>
                     <p>Lorem ipsum dolor sit amet.</p>
                 </div>
             </div>
